@@ -26,9 +26,6 @@ Data,command,SEARCH,548,"SEARCH A, key, BYREF ridx [USE cmpfunc]","Scans an arra
 Data,command,SORT,549,"SORT array [USE cmpfunc]","Sorts an array. The cmpfunc if specified, takes 2 vars to compare and must return: -1 if x < y, +1 if x > y, 0 if x = y."
 Data,command,SWAP,550,"SWAP a, b","Exchanges the values of two variables. The parameters may be variables of any type."
 Data,function,ARRAY,1432,"ARRAY [var | expr]","Creates a ARRAY or MAP variable from the given string or expression"
-Data,function,CDBL,552,"CDBL (x)","Convert x to 64b real number. Meaningless. Used for compatibility."
-Data,function,CINT,553,"CINT (x)","Converts x to 32b integer. Meaningless. Used for compatibility."
-Data,function,CREAL,554,"CREAL (x)","Convert x to 64b real number. Meaningless. Used for compatibility."
 Data,function,ISARRAY,555,"ISARRAY (x)","Returns true if x is an array."
 Data,function,ISDIR,556,"ISDIR (x)","Returns true if x is a directory."
 Data,function,ISFILE,557,"ISFILE (x)","Returns true if x is a regular file."
