@@ -123,16 +123,13 @@ print "BGETC:" '+ BGETC (fileN)
 print "BIN:" + BIN (x)
 print "CAT:" + CAT (x)
 print "CBS:" + CBS (s)
-print "CDBL:" + CDBL (x)
 print "CEIL:" + CEIL (x)
 print "CHOP:" + CHOP ("123.45$")
 print "CHR:" + CHR (87)
-print "CINT:" + CINT (x)
 print "COS:" + COS (x)
 print "COSH:" + COSH (x)
 print "COT:" + COT (x)
 print "COTH:" + COTH (x)
-print "CREAL:" + CREAL (x)
 print "CSC:" + CSC (x)
 print "CSCH:" + CSCH (x)
 print "DATE:"' + DATE
