@@ -106,16 +106,13 @@ BGETC:
 BIN:00000000000000000000000000001100
 CAT:
 CBS:catsanddogs
-CDBL:12.3
 CEIL:13
 CHOP:123.45
 CHR:W
-CINT:12
 COS:0.96473261788661
 COSH:109847.99433834482625
 COT:-3.66495480230944
 COTH:1.00000000004144
-CREAL:12.3
 CSC:-3.79893323223389
 CSCH:0.00000910348893
 DATE:
@@ -171,7 +168,7 @@ POINT:0
 POLYAREA:0
 POLYCENT:
 POW:12.3
-PROGLINE:191
+PROGLINE:188
 PTDISTLN:0
 PTDISTSEG:0
 PTSIGN:0
