@@ -329,7 +329,6 @@ enum func_keywords {
   kwLOG10,
   kwFIX,
   kwINT,
-  kwCDBL,
   kwDEG,
   kwRAD,
   kwPENF,
@@ -338,7 +337,6 @@ enum func_keywords {
   kwFRAC,
   kwFRE,
   kwSGN,
-  kwCINT,
   kwEOF,
   kwSEEKF,
   kwLOF,
