@@ -269,8 +269,6 @@ struct func_keyword_s func_table[] = {
 { "LOG10",                      kwLOG10 },
 { "FIX",                        kwFIX },
 { "INT",                        kwINT },
-{ "CDBL",                       kwCDBL },
-{ "CREAL",                      kwCDBL },
 { "DEG",                        kwDEG },
 { "RAD",                        kwRAD },
 { "PEN",                        kwPENF },
@@ -279,7 +277,6 @@ struct func_keyword_s func_table[] = {
 { "FRAC",                       kwFRAC },
 { "FRE",                        kwFRE },
 { "SGN",                        kwSGN },
-{ "CINT",                       kwCINT },
 { "EOF",                        kwEOF },
 { "SEEK",                       kwSEEKF },
 { "LOF",                        kwLOF },
